--- a/src/pages/drawer/drawer_page2.css
+++ b/src/pages/drawer/drawer_page2.css
@@ -75,3 +75,10 @@
     font-size: 5vh;
     margin-top: 58vh;
 }
+
+.openDrawerImg{
+    width: 12%;
+    position: absolute;
+    top: 4%;
+    left: 45%;
+}
