--- a/src/pages/premium/premium2/premium2_1.css
+++ b/src/pages/premium/premium2/premium2_1.css
@@ -10,7 +10,7 @@
     flex-direction: column;
     align-items: center;
     position: relative;
-    top: 5%;
+    top: 20%;
 }
 
 .premium2_1_originalPrice{
@@ -61,7 +61,7 @@
 .premium2_1_Info_1_1{
     display: flex;
     flex-direction: row;
-    margin: 15px 0;
+    margin: 3vh 0;
     color: white;
     padding: 15px;
     border-radius: 10px;
@@ -84,7 +84,7 @@
 .premium2_1_Info_1_2{
     display: flex;
     flex-direction: row;
-    margin: 15px 0;
+    margin: 3vh 0;
     color: white;
     padding: 15px;
     border-radius: 10px;
@@ -107,7 +107,7 @@
 .premium2_1_Info_1_3{
     display: flex;
     flex-direction: row;
-    margin: 15px 0;
+    margin: 3vh 0;
     padding: 15px;
     border-radius: 10px;
     width: 300px;
@@ -140,13 +140,13 @@
     display: flex;
     flex-direction: column;
     text-align: center;
-    margin: 0 150px;
+    margin: -2vh 150px;
 }
 
 .premium2_1_Info_3_1{
     display: flex;
     flex-direction: row;
-    margin: 15px 0;
+    margin: 3vh 0;
     padding: 15px;
     border-radius: 10px;
     width: 300px;
@@ -168,7 +168,7 @@
 .premium2_1_Info_3_2{
     display: flex;
     flex-direction: row;
-    margin: 15px 0;
+    margin: 3vh 0;
     padding: 15px;
     border-radius: 10px;
     width: 300px;
@@ -190,7 +190,7 @@
 .premium2_1_Info_3_3{
     display: flex;
     flex-direction: row;
-    margin: 15px 0;
+    margin: 3vh 0;
     padding: 15px;
     border-radius: 10px;
     width: 250px;
