--- a/src/pages/drawer/drawer_page4.css
+++ b/src/pages/drawer/drawer_page4.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 130vh;
+    height: 110vh;
     background-color: #F0F0F0;
     position: relative;
   }
@@ -28,12 +28,20 @@
   }
   
   .slick-prev {
+    position: absolute;
     left: 6vw;
-    top: 60vh;
+    top: 50vh;
   }
   
   .slick-next {
+    position: absolute;
     right: 6vw;
-    top: 60vh;
+    top: 47vh;
+  }
+
+  .closeDrawerImg{
+    width: 13%;
+    position: absolute;
+    bottom: -2%;
   }
   
