--- a/src/pages/standard/standard1.css
+++ b/src/pages/standard/standard1.css
@@ -9,7 +9,7 @@
     flex-direction: column;
     align-items: center;
     position: relative;
-    top: 5%;
+    top: 18%;
 }
 
 .standard1_originalPrice{
@@ -54,13 +54,13 @@
     display: flex;
     flex-direction: column;
     text-align: center;
-    margin: 0 50px;
+    margin: 0 150px;
 }
 
 .standard1_Info_1_1{
     display: flex;
     flex-direction: row;
-    margin: 15px 0;
+    margin: 3vh 0;
     color: white;
     padding: 15px;
     border-radius: 10px;
@@ -83,7 +83,7 @@
 .standard1_Info_1_2{
     display: flex;
     flex-direction: row;
-    margin: 15px 0;
+    margin: 3vh 0;
     color: white;
     padding: 15px;
     border-radius: 10px;
@@ -106,7 +106,7 @@
 .standard1_Info_1_3{
     display: flex;
     flex-direction: row;
-    margin: 15px 0;
+    margin: 3vh 0;
     padding: 15px;
     border-radius: 10px;
     width: 300px;
@@ -140,13 +140,13 @@
     display: flex;
     flex-direction: column;
     text-align: right;
-    margin: 0 50px;
+    margin: -1.5vh 150px;
 }
 
 .standard1_Info_3_1{
     display: flex;
     flex-direction: row;
-    margin: 15px 0;
+    margin: 3vh 0;
     padding: 15px;
     border-radius: 10px;
     width: 300px;
@@ -174,7 +174,7 @@
 .standard1_Info_3_2{
     display: flex;
     flex-direction: row;
-    margin: 15px 0;
+    margin: 3vh 0;
     padding: 15px;
     border-radius: 10px;
     width: 300px;
@@ -196,7 +196,7 @@
 .standard1_Info_3_3{
     display: flex;
     flex-direction: row;
-    margin: 15px 0;
+    margin: 3vh 0;
     padding: 15px;
     border-radius: 10px;
     width: 300px;
