--- a/src/pages/open/open.css
+++ b/src/pages/open/open.css
@@ -1,4 +1,4 @@
-@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css");
+@import url(https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css);
 @import url(https://db.onlinewebfonts.com/c/203ca707d5875159f71d2aff42401749?family=Athelas+Regular);
 @import url(https://db.onlinewebfonts.com/c/4d7f27cfd708f4160690732603ab13a2?family=Athelas+Italic);
 @import url(https://db.onlinewebfonts.com/c/74b19ec91c2d7dd89739c890b409a1fd?family=KoreaYMyungjo);
