--- a/src/pages/open/open_page1.css
+++ b/src/pages/open/open_page1.css
@@ -1,37 +1,54 @@
+@import url(https://db.onlinewebfonts.com/c/203ca707d5875159f71d2aff42401749?family=Athelas+Regular);
+@import url(https://db.onlinewebfonts.com/c/4d7f27cfd708f4160690732603ab13a2?family=Athelas+Italic);
+@import url(https://db.onlinewebfonts.com/c/74b19ec91c2d7dd89739c890b409a1fd?family=KoreaYMyungjo);
+/*font-family: "Athelas Italic", "Athelas Regular */
+/*font-family: "KoreaYMyungjo"; */
 
+*{margin:0px; padding:0px;}
+body{margin:0px; padding:0px; height: 110vw;}
+.pageone_wrap{margin: 0px; display: flex; flex-direction: column; height: 140vh;}
+    .gird_wrap{ position: relative; left: 0; top: 0; right: 0;display:grid;
+        grid-template-columns: repeat(14, 1fr);
+        grid-template-rows: repeat(6,14vh);}
+                        
+.girdbox1{ grid-column: 1/4; grid-row: 1/3; position: relative;}
+        .box1_img{object-fit: contain; position: absolute; width: 50%;}
+.girdbox2{ grid-column: 4/7; grid-row: 1/3; position: relative;}
+        .box2_img{object-fit: contain; position: absolute; width: 80%;}
+.girdbox3{ grid-column: 7/10; grid-row: 1/3; position: relative;}
+        .box3_img{object-fit: contain; position: absolute; width: 80%;}
+.girdbox4{ grid-column: 10/13; grid-row: 1/3; position: relative;}
+        .box4_img{object-fit: contain; position: absolute; width: 50%;}
+.girdbox5{ grid-column: 13/15; grid-row: 1/3; position: relative;}
+        .box5_img{object-fit: contain; position: absolute; width: 100%;}
 
-#div1{background-color: gray;}
+/* 중간박스 -------------------------------------------------*/
+.girdbox6{ grid-column: 1/4; grid-row: 3/5; position: relative;}
+        .box6_img{object-fit: contain; position: absolute; width:60%;}
+.girdbox7{ grid-column: 4/12; grid-row: 3/5; }
+    .font_wrap{display:flex; flex-direction: column; align-items: center;
+                position: relative;justify-content: center;}
+        .text_open{position: absolute; top:0.4em; font-size: 5vw; font-family: 'Athelas Italic';}
+        .text_drawer{font-size: 16vw;font-family: "KoreaYMyungjo";font-weight: 900; position: absolute; top:0.3em;}
+.girdbox8{ grid-column: 12/15; grid-row: 3/4; position: relative;}
+        .box8_img{object-fit: contain; position: absolute; width: 70%;}
+.girdbox8_1{ grid-column: 12/15; grid-row: 4/5; position: relative;}
+        .box8_1_img{object-fit: contain; position: fixed; left:2px; width: 35vh;}
 
-/* ---------------상단 이미지 박스---------------- */
-#img_box{margin:none; padding: 0;}
-#img1{object-fit: contain;}
-#img2{object-fit: contain;}
-#img3{object-fit: contain;}
-#img5{object-fit: contain;}
+/* 하단박스 -------------------------------------------------*/
+.endbox_wrap{display:flex;width: 100%; justify-content: space-around;
+} 
 
-#img_camera{object-fit: contain; width: 25vw;}
-
-/* --------------- 센터 텍스트 ------------------ */
-
-#text_wrap{width: 100%; height: 100%;
-            display: flex; }
-#OPEN{font-family: "Athelas Italic"; position: fixed;
-        top:-10vw; left:-4vw; margin: 0; padding: 0; }
-#DRAWER{width: 100%; margin: 0; position: fixed;
-        top:-10vw; left: -36vw; }
-
-
-/* ----------------- 하단 이미지 박스 ----------------- */
-
-#img6{object-fit: contain; }
-#img7{object-fit: contain;}
-#img8{object-fit: contain;}
-#img9{object-fit: contain;}
-#img10{object-fit: contain;}
-#img11{object-fit: contain;}
-#img12{object-fit: contain;}
-#img13{object-fit: contain;}
-#img14{object-fit: contain;}
-
-#mouse_logo{width: 100%; background-color: pink;}
+.girdbox9{position: fixed; left:0}
+        .box9_img{object-fit: contain;width: 70%;}
+.girdbox10{position: fixed; left:20em; bottom:-2em}
+        .box10_img{object-fit: contain;width: 60%;}
+.girdbox11{position: fixed; left:40em;}
+        .box11_img{object-fit: contain;width:60%;}
+.girdbox12{position: fixed; right:30em;}
+        .box12_img{object-fit: contain;width: 90%;}
+.girdbox13{position: fixed; right:7em;}
+        .box13_img{object-fit: contain;width: 90%;}
+.girdbox14{position: fixed; right:-25em; bottom:-10em}
+        .box14_img{object-fit: contain;width: 40%;}
 
