--- a/src/pages/premium/premium2/premium2_1.css
+++ b/src/pages/premium/premium2/premium2_1.css
@@ -29,6 +29,7 @@
     border-radius: 10px;
     white-space: nowrap;
     font-size: 30px;
+    font-weight: bold;
 }
 
 .premium2_1_Info_name {
@@ -73,12 +74,15 @@
     margin-right: 15px;
     color: gray;
     font-size: 15px;
+    font-weight: bold;
 }
 
 .premium2_1_Info_1_1_brands{
     margin-left: 15px;
+    margin-top: -4.5px;
     color: rgb(41, 41, 41);
     font-size: 20px;
+    font-weight: lighter;
 }
 
 .premium2_1_Info_1_2{
@@ -96,12 +100,15 @@
     margin-right: 15px;
     color: gray;
     font-size: 15px;
+    font-weight: bold;
 }
 
 .premium2_1_Info_1_2_years{
     margin-left: 15px;
+    margin-top: -4.5px;
     color: rgb(41, 41, 41);
     font-size: 20px;
+    font-weight: lighter;
 }
 
 .premium2_1_Info_1_3{
@@ -118,12 +125,15 @@
     margin-right: 15px;
     color: gray;
     font-size: 15px;
+    font-weight: bold;
 }
 
 .premium2_1_Info_1_3_times{
     margin-left: 15px;
+    margin-top: -4.5px;
     color: rgb(41, 41, 41);
     font-size: 20px;
+    font-weight: lighter;
 }
 
 .premium2_1_Info_2{
@@ -155,14 +165,17 @@
 
 .premium2_1_Info_3_1_name{
     margin-right: 15px;
+    margin-top: -3.5px;
     color: rgb(41, 41, 41);
     font-size: 20px;
+    font-weight: lighter;
 }
 
 .premium2_1_Info_3_1_specialist{
     margin-left: 15px;
     color: gray;
     font-size: 15px;
+    font-weight: bold;
 }
 
 .premium2_1_Info_3_2{
@@ -177,14 +190,17 @@
 
 .premium2_1_Info_3_2_status{
     margin-right: 15px;
+    margin-top: -3.5px;
     color: rgb(41, 41, 41);
     font-size: 20px;
+    font-weight: lighter;
 }
 
 .premium2_1_Info_3_2_prodStatus{
     margin-left: 15px;
     color: gray;
     font-size: 15px;
+    font-weight: bold;
 }
 
 .premium2_1_Info_3_3{
@@ -229,11 +245,17 @@
 }
 
 .premium2_1_buyIcon{
-    width: 30px;
+    width: 20px;
+    height: 23px;
+}
+
+.premium2_1_basketIcon{
+    width: 20px;
+    height: 23px;
 }
 
 .premium2_1_buyIcon, .premium2_1_basketIcon{
-    margin-left: 5px;
+    margin-right: 10px;
 }
 
 .premium2_1_BuyBtn:hover{
