--- a/src/pages/drawer/drawer_page2.css
+++ b/src/pages/drawer/drawer_page2.css
@@ -7,7 +7,7 @@
 
 .DrawerPage2{
     width: 100vw;
-    height: 150vh;
+    height: 120vh;
     background-color: #F0F0F0;
     text-align: center;
     display: flex;
@@ -15,7 +15,6 @@
     justify-content: center;
     align-items: center;
     position: relative;
-    font-family: 'TheJamsil5Bold';
 }
 
 .svg_2{
@@ -23,62 +22,22 @@
 }
 
 .DrawerPage2_1{
-    width: 100%;
-    background-color: #F0F0F0;
+    width: 80%;
     position: absolute;
+    background-color: #F0F0F0;
+    top: 45vh;
+    left: 11vw;
     padding: 5vh;
 }
 
-.DrawerPage2_1_1{
-    font-size: 8vh;
-    margin: 5vh;
-}
-
-.DrawerPage2_1_2{
-    display: flex;
-    flex-direction: row;
-}
-
-.DrawerPage2_1_2 img{
-    width: 12%;
-    margin: 0 auto;
-}
-
-.DrawerPage2_img1{
-    position: absolute;
-    left: 25vw;
-}
-
-.DrawerPage2_img2{
-    position: absolute;
-    top: 40vh;
-    left: 35vw;
-}
-
-.DrawerPage2_img3{
-    position: absolute;
-    left: 45vw;
-}
-
-.DrawerPage2_img4{
-    position: absolute;
-    top: 40vh;
-    right: 34vw;
-}
-
-.DrawerPage2_img5{
-    position: absolute;
-    right: 24vw;
-}
-
-.DrawerPage2_1_3{
-    font-size: 5vh;
-    margin-top: 58vh;
+.DrawerPage2_1_desc{
+    width: 50%;
+    height: 100%;
 }
 
 .openDrawerImg{
     width: 12%;
     position: absolute;
-    top: 4%;
+    top: 12%;
     left: 45%;
 }
