--- a/src/pages/drawer/drawer_page3.css
+++ b/src/pages/drawer/drawer_page3.css
@@ -1,6 +1,13 @@
+@font-face {
+    font-family: 'TheJamsil5Bold';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2302_01@1.0/TheJamsil5Bold.woff2') format('woff2');
+    font-weight: 700;
+    font-style: normal;
+}
+
 .DrawerPage3{
     width: 100vw;
-    height: 100vh;
+    height: 120vh;
     background-color: #F0F0F0;
     text-align: center;
     display: flex;
@@ -9,23 +16,64 @@
     align-items: center;
     position: relative;
     margin-top: 0;
+    font-family: 'TheJamsil5Bold';
 }
 
 .svg_3{
     margin-left: 2vw;
-    margin-top: 0;
 }
 
 .DrawerPage3_1{
-    width: 80%;
-    position: absolute;
+    width: 100%;
     background-color: #F0F0F0;
-    top: 0vh;
-    left: 11vw;
+    position: absolute;
     padding: 5vh;
 }
 
-.DrawerPage3_1_desc{
-    width: 50%;
-    
+.DrawerPage3_1_1{
+    font-size: 8vh;
+    margin: 5vh;
 }
+
+.DrawerPage3_1_2{
+    display: flex;
+    flex-direction: row;
+}
+
+.DrawerPage3_1_2 img{
+    width: 12%;
+    margin: 0 auto;
+}
+
+.DrawerPage3_img1{
+    position: absolute;
+    left: 25vw;
+}
+
+.DrawerPage3_img2{
+    position: absolute;
+    top: 40vh;
+    left: 35vw;
+}
+
+.DrawerPage3_img3{
+    position: absolute;
+    left: 45vw;
+}
+
+.DrawerPage3_img4{
+    position: absolute;
+    top: 40vh;
+    right: 34vw;
+}
+
+.DrawerPage3_img5{
+    position: absolute;
+    right: 24vw;
+}
+
+.DrawerPage3_1_3{
+    font-size: 5vh;
+    margin-top: 50vh;
+}
+
