--- a/src/pages/standard/standard2.css
+++ b/src/pages/standard/standard2.css
@@ -72,12 +72,15 @@
     margin-right: 15px;
     color: gray;
     font-size: 15px;
+    font-weight: bold;
 }
 
 .standard2_Info_1_1_brands{
     margin-left: 15px;
+    margin-top: -4.5px;
     color: rgb(41, 41, 41);
     font-size: 20px;
+    font-weight: lighter;
 }
 
 .standard2_Info_1_2{
@@ -95,12 +98,15 @@
     margin-right: 15px;
     color: gray;
     font-size: 15px;
+    font-weight: bold;
 }
 
 .standard2_Info_1_2_years{
     margin-left: 15px;
+    margin-top: -4.5px;
     color: rgb(41, 41, 41);
     font-size: 20px;
+    font-weight: lighter;
 }
 
 .standard2_Info_1_3{
@@ -117,12 +123,15 @@
     margin-right: 15px;
     color: gray;
     font-size: 15px;
+    font-weight: bold;
 }
 
 .standard2_Info_1_3_times{
     margin-left: 15px;
+    margin-top: -4.5px;
     color: rgb(41, 41, 41);
     font-size: 20px;
+    font-weight: lighter;
 }
 
 .standard2_Info_2{
@@ -155,14 +164,17 @@
 
 .standard2_Info_3_1_name{
     margin-right: 15px;
+    margin-top: -4.5px;
     color: rgb(41, 41, 41);
     font-size: 20px;
+    font-weight: lighter;
 }
 
 .standard2_Info_3_1_specialist{
     margin-left: 15px;
     color: gray;
     font-size: 15px;
+    font-weight: bold;
 }
 
 .standard2_Info_3_2{
@@ -177,14 +189,17 @@
 
 .standard2_Info_3_2_status{
     margin-right: 15px;
+    margin-top: -4.5px;
     color: rgb(41, 41, 41);
     font-size: 20px;
+    font-weight: lighter;
 }
 
 .standard2_Info_3_2_prodStatus{
     margin-left: 15px;
     color: gray;
     font-size: 15px;
+    font-weight: bold;
 }
 
 .standard2_Info_3_3{
@@ -230,9 +245,14 @@
 }
 
 .standard2_buyIcon{
-    width: 30px;
+    width: 20px;
+    height: 23px;
 }
 
+.standard2_basketIcon{
+    width: 20px;
+    height: 23px;
+}
 .standard2_BuyBtn:hover{
     cursor: pointer;
 }
@@ -242,5 +262,5 @@
 }
 
 .standard2_buyIcon, .standard2_basketIcon{
-    margin-left: 5px;
+    margin-right: 10px;
 }
