--- a/src/pages/shop.css
+++ b/src/pages/shop.css
@@ -51,7 +51,7 @@
 .product_container_5{
     position: absolute;
     top: 50vh;
-    left: 8vw;
+    left: 5vw;
     width: 15vw;
     height: 35vh;
     box-sizing: border-box;
@@ -84,10 +84,28 @@
     box-sizing: border-box;
 }
 
+.product_container_9{
+    position: absolute;
+    top: 5vh;
+    left: -5vw;
+    width: 15vw;
+    height: 35vh;
+    box-sizing: border-box;
+}
+
+.product_container_10{
+    position: absolute;
+    top: 50vh;
+    left: 108vw;
+    width: 15vw;
+    height: 35vh;
+    box-sizing: border-box;
+}
+
 .product_img{
     position: absolute;
     top: 6vh;
-    left: 1.3vw;
+    left: -0.5vw;
     width: 13vw;
     height: 18vh;
     z-index: 1;
@@ -96,7 +114,7 @@
 .product_img_2 {
     position: absolute;
     top: 8vh;
-    left: 2.6vw;
+    left: 1.5vw;
     width: 10vw;
     height: 14vh;
     z-index: 1;
@@ -114,7 +132,7 @@
 .product_img_4 {
     position: absolute;
     top: 6vh;
-    left: 1.3vw;
+    left: 0.5vw;
     width: 13vw;
     height: 18vh;
     z-index: 1;
@@ -123,7 +141,7 @@
 .product_img_5 {
     position: absolute;
     top: 3vh;
-    left: 4vw;
+    left: 2.5vw;
     width: 8vw;
     height: 22vh;
     z-index: 1;
@@ -132,7 +150,7 @@
 .product_img_6 {
     position: absolute;
     top: 2vh;
-    left: 4.7vw;
+    left: 4vw;
     width: 5.5vw;
     height: 26vh;
     z-index: 1;
@@ -141,7 +159,7 @@
 .product_img_7 {
     position: absolute;
     top: 2vh;
-    left: 4.8vw;
+    left: 4vw;
     width: 5vw;
     height: 24vh;
     z-index: 1;
@@ -150,12 +168,29 @@
 .product_img_8 {
     position: absolute;
     top: 6vh;
-    left: 2.8vw;
+    left: 2vw;
     width: 10vw;
     height: 20vh;
     z-index: 1;
 }
 
+.product_img_9 {
+    position: absolute;
+    top: 6vh;
+    left: 0.5vw;
+    width: 10vw;
+    height: 20vh;
+    z-index: 1;
+}
+
+.product_img_10 {
+    position: absolute;
+    top: 6vh;
+    left: 2.3vw;
+    width: 8vw;
+    height: 20vh;
+    z-index: 1;
+}
 
 .product_name{
     position: absolute;
@@ -167,7 +202,7 @@
     white-space: nowrap;
     color: rgba(87, 87, 87, 0.3);
     overflow: hidden;
-    font-family: 'Nanum Myeongjo', serif;
+    font-family: 'Athelas Italic', serif;
 }
 
 .product_name_2 {
@@ -180,7 +215,7 @@
     white-space: nowrap;
     color: rgba(87, 87, 87, 0.3);
     overflow: hidden;
-    font-family: 'Nanum Myeongjo', serif;
+    font-family: 'Athelas Italic', serif;
 }
 
 .product_name_3 {
@@ -193,7 +228,7 @@
     white-space: nowrap;
     color: rgba(87, 87, 87, 0.3);
     overflow: hidden;
-    font-family: 'Nanum Myeongjo', serif;
+    font-family: 'Athelas Italic', serif;
 }
 
 .product_name_4 {
@@ -206,7 +241,7 @@
     white-space: nowrap;
     color: rgba(87, 87, 87, 0.3);
     overflow: hidden;
-    font-family: 'Nanum Myeongjo', serif;
+    font-family: 'Athelas Italic', serif;
 }
 
 .product_name_5{
@@ -219,7 +254,7 @@
     white-space: nowrap;
     color: rgba(87, 87, 87, 0.3);
     overflow: hidden;
-    font-family: 'Nanum Myeongjo', serif;
+    font-family: 'Athelas Italic', serif;
 }
 
 .product_name_6{
@@ -232,7 +267,7 @@
     white-space: nowrap;
     color: rgba(87, 87, 87, 0.3);
     overflow: hidden;
-    font-family: 'Nanum Myeongjo', serif;
+    font-family: 'Athelas Italic', serif;
 }
 
 .product_name_7{
@@ -245,7 +280,7 @@
     white-space: nowrap;
     color: rgba(87, 87, 87, 0.3);
     overflow: hidden;
-    font-family: 'Nanum Myeongjo', serif;
+    font-family: 'Athelas Italic', serif;
 }
 
 .product_name_8{
@@ -258,7 +293,33 @@
     white-space: nowrap;
     color: rgba(87, 87, 87, 0.3);
     overflow: hidden;
-    font-family: 'Nanum Myeongjo', serif;
+    font-family: 'Athelas Italic', serif;
+}
+
+.product_name_9{
+    position: absolute;
+    top: 12vh;
+    left: 0.5vw;
+    font-size: 2vw;
+    font-weight: bold;
+    text-align: center;
+    white-space: nowrap;
+    color: rgba(87, 87, 87, 0.3);
+    overflow: hidden;
+    font-family: 'Athelas Italic', serif;
+}
+
+.product_name_10{
+    position: absolute;
+    top: 14vh;
+    left: 0.5vw;
+    font-size: 2vw;
+    font-weight: bold;
+    text-align: center;
+    white-space: nowrap;
+    color: rgba(87, 87, 87, 0.3);
+    overflow: hidden;
+    font-family: 'Athelas Italic', serif;
 }
 
 .product_name::before{
@@ -269,7 +330,7 @@
     white-space: nowrap;
     overflow: hidden;
     color: rgb(255, 255, 255);
-    font-family: 'Nanum Myeongjo', serif;
+    font-family: 'Athelas Italic', serif;
 }
 /* ::before	요소 내용 앞쪽에 새 컨텐츠를 추가 */
 
@@ -281,7 +342,7 @@
     white-space: nowrap;
     overflow: hidden;
     color: #96E3D5 ;
-    font-family: 'Nanum Myeongjo', serif;
+    font-family: 'Athelas Italic', serif;
 }
 
 .product_name_3::before{
@@ -292,7 +353,7 @@
     white-space: nowrap;
     overflow: hidden;
     color: #FBC1BF;
-    font-family: 'Nanum Myeongjo', serif;
+    font-family: 'Athelas Italic', serif;
 }
 /* ::before	요소 내용 앞쪽에 새 컨텐츠를 추가 */
 
@@ -304,7 +365,7 @@
     white-space: nowrap;
     overflow: hidden;
     color: #6E6104;
-    font-family: 'Nanum Myeongjo', serif;
+    font-family: 'Athelas Italic', serif;
 }
 
 .product_name_5::before{
@@ -314,8 +375,8 @@
     width: 0px;
     white-space: nowrap;
     overflow: hidden;
-    color: #ffffff;
-    font-family: 'Nanum Myeongjo', serif;
+    color: #B7BAB4;
+    font-family: 'Athelas Italic', serif;
 }
 
 .product_name_6::before{
@@ -325,8 +386,8 @@
     width: 0px;
     white-space: nowrap;
     overflow: hidden;
-    color: #ffffff;
-    font-family: 'Nanum Myeongjo', serif;
+    color: #FCD586;
+    font-family: 'Athelas Italic', serif;
 }
 
 .product_name_7::before{
@@ -336,8 +397,8 @@
     width: 0px;
     white-space: nowrap;
     overflow: hidden;
-    color: #ffffff;
-    font-family: 'Nanum Myeongjo', serif;
+    color: #BD7F52;
+    font-family: 'Athelas Italic', serif;
 }
 
 .product_name_8::before{
@@ -347,18 +408,42 @@
     width: 0px;
     white-space: nowrap;
     overflow: hidden;
-    color: #ffffff;
-    font-family: 'Nanum Myeongjo', serif;
+    color: #C59E49;
+    font-family: 'Athelas Italic', serif;
 }
 
-.product_img:hover, .product_img_2:hover, .product_img_3:hover, .product_img_4:hover, .product_img_5:hover, .product_img_6:hover, .product_img_7:hover, .product_img_8:hover{
+.product_name_9::before{
+    content: attr(prod_title);
+    display: block;
+    position: absolute;
+    width: 0px;
+    white-space: nowrap;
+    overflow: hidden;
+    color: #A02F12;
+    font-family: 'Athelas Italic', serif;
+}
+
+.product_name_10::before{
+    content: attr(prod_title);
+    display: block;
+    position: absolute;
+    width: 0px;
+    white-space: nowrap;
+    overflow: hidden;
+    color: #0193DA;
+    font-family: 'Athelas Italic', serif;
+}
+
+.product_img:hover, .product_img_2:hover, 
+.product_img_3:hover, .product_img_4:hover, .product_img_5:hover, .product_img_6:hover, 
+.product_img_7:hover, .product_img_8:hover, .product_img_9:hover, .product_img_10:hover{
     cursor: pointer;
 }
 
 .product_link:hover + .product_name::before,
 .product_link:hover + .product_name_2::before, .product_link:hover + .product_name_3::before, .product_link:hover + .product_name_4::before,
 .product_link:hover + .product_name_5::before, .product_link:hover + .product_name_6::before, .product_link:hover + .product_name_7::before,
-.product_link:hover + .product_name_8::before{
+.product_link:hover + .product_name_8::before, .product_link:hover + .product_name_9::before, .product_link:hover + .product_name_10::before{
     transition: all 0.2s linear;
     width: 100%;
 }
@@ -366,7 +451,7 @@
 .product_link:not(:hover) + .product_name::before,
 .product_link:not(:hover) + .product_name_2::before, .product_link:not(:hover) + .product_name_3::before, .product_link:not(:hover) + .product_name_4::before,
 .product_link:not(:hover) + .product_name_5::before, .product_link:not(:hover) + .product_name_6::before, .product_link:not(:hover) + .product_name_7::before,
-.product_link:not(:hover) + .product_name_8::before{
+.product_link:not(:hover) + .product_name_8::before, .product_link:not(:hover) + .product_name_9::before, .product_link:not(:hover) + .product_name_10::before{
     transition: all 0.2s linear;
     width: 0;
 }
@@ -374,7 +459,7 @@
 .product_sub_name_1{
     position: absolute;
     top: 28vh;
-    left: -0.2vw;
+    left: -1.5vw;
     font-size: 1.5vw;
     font-weight: bold;
     text-align: center;
@@ -387,7 +472,7 @@
 .product_sub_name_2{
     position: absolute;
     top: 28vh;
-    left: 2.2vw;
+    left: 1.2vw;
     font-size: 1.5vw;
     font-weight: bold;
     text-align: center;
@@ -400,7 +485,7 @@
 .product_sub_name_3{
     position: absolute;
     top: 28vh;
-    left: 1.2vw;
+    left: 0.5vw;
     font-size: 1.5vw;
     font-weight: bold;
     text-align: center;
@@ -413,7 +498,7 @@
 .product_sub_name_4{
     position: absolute;
     top: 28vh;
-    left: 2vw;
+    left: 1vw;
     font-size: 1.5vw;
     font-weight: bold;
     text-align: center;
@@ -426,7 +511,7 @@
 .product_sub_name_5{
     position: absolute;
     top: 28vh;
-    left: 2.5vw;
+    left: 2vw;
     font-size: 1.5vw;
     font-weight: bold;
     text-align: center;
@@ -439,7 +524,7 @@
 .product_sub_name_6{
     position: absolute;
     top: 28vh;
-    left: 2.7vw;
+    left: 2vw;
     font-size: 1.5vw;
     font-weight: bold;
     text-align: center;
@@ -452,7 +537,7 @@
 .product_sub_name_7{
     position: absolute;
     top: 28vh;
-    left: 2.7vw;
+    left: 2vw;
     font-size: 1.5vw;
     font-weight: bold;
     text-align: center;
@@ -465,7 +550,7 @@
 .product_sub_name_8{
     position: absolute;
     top: 28vh;
-    left: 2.7vw;
+    left: 1.5vw;
     font-size: 1.5vw;
     font-weight: bold;
     text-align: center;
@@ -475,4 +560,28 @@
     font-family: 'Nanum Myeongjo', serif;
 }
 
+.product_sub_name_9{
+    position: absolute;
+    top: 28vh;
+    left: 1.5vw;
+    font-size: 1.5vw;
+    font-weight: bold;
+    text-align: center;
+    white-space: nowrap;
+    color: rgba(211, 211, 211, 0.3);
+    overflow: hidden;
+    font-family: 'Nanum Myeongjo', serif;
+}
 
+.product_sub_name_10{
+    position: absolute;
+    top: 28vh;
+    left: 1.5vw;
+    font-size: 1.5vw;
+    font-weight: bold;
+    text-align: center;
+    white-space: nowrap;
+    color: rgba(211, 211, 211, 0.3);
+    overflow: hidden;
+    font-family: 'Nanum Myeongjo', serif;
+}
