payment, paycomplete  폴더 수정

--- a/src/pages/paycomplete/paycomplete2.css
+++ b/src/pages/paycomplete/paycomplete2.css
@@ -14,8 +14,9 @@
     flex: 1.2;
     text-align: center;
     position: relative;
-    top: 14%;
+    top: 19%;
     left: 0%;
+    height: 50%;
 }
 
 .payment2_complete_product_img{
