--- a/src/pages/open/open_page5.css
+++ b/src/pages/open/open_page5.css
@@ -1,31 +1,14 @@
 .page5{position: relative; height: 100vh;}
 
-.black_one{width: 100vw; height:50vh; background-color: black;
+.black_box{ height:40vh; width: 100%; background-color: white;}
+.black_one{width: 100vw; height:50vh;
             position: absolute; top:0;}
-.black_two{width: 100vw; height:50vh; background-color: black;
+.black_two{width: 100vw; height:50vh; 
     position: absolute; bottom:0;}
-     
-      .wrapper {
-        width: 150px;
-        height: 150px;
-        position: fixed;
-        top: 50%;
-        left: 50%;
-        transform: translateX(-50%) translateY(-50%);
-      }
-      
-      .container {
-        width: 100%;
-        height: 100%;
-        overflow: hidden;
-        background: rgba(255, 255, 255, 0.2);
-        border-radius: 30px;
-      }
-      
-      .item {
-        width: inherit;
-        height: inherit;
-        background: white;
-        transform-origin: 50% 100%;
-      }
-      
+
+.page5_font_box{ display:flex; flex-direction: column;
+                width: 100%; text-align: center;}
+
+#page5_text1 {font-size: 4em; font-weight: 700; margin-bottom: -.7em; }
+#page5_text2 {font-size: 10em; font-weight: 700; margin:0; margin-bottom: -.1em;}
+#page5_text3 {font-size: 3em;}
